# GuiMan

./: .SRCINFO  .gitignore  PKGBUILD  README.md  guiman.desktop  index.html  install-polkit.sh  install.sh  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.js
.github/workflows/: aur-test.yml  release.yml
polkit/: com.guiman.pkexec.policy
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: error.rs  main.rs  main.rs.backup  models.rs  utils.rs  validation.rs
src-tauri/src/aur/: mod.rs  operations.rs  search.rs
src-tauri/src/commands/: backup.rs  clean_architecture.rs  dependencies.rs  executor.rs  files.rs  groups.rs  mod.rs  package.rs  repos.rs  search.rs  system.rs  updater.rs
src-tauri/src/pacman/: mod.rs  operations.rs  query.rs
src/components/: BackupModal.vue  CommandPalette.vue  ConfirmDialog.vue  ContextMenu.vue  Dashboard.vue  DataVisualization.vue  DependencyGraph.vue  DependencyTreeNode.vue  FilterBar.vue  LogModal.vue  NotificationSystem.vue  PackageCard.vue  PackageDetailsModal.vue  PackageGrid.vue  PackageTable.vue  PieChart.vue  SearchBar.vue  SettingsModal.vue  Sidebar.vue  SkeletonLoader.vue  StatusBar.vue
src/utils/: config.js
