[package]
name = "guiman"
version = "1.5.0"
edition = "2021"
authors = ["Junaid Rahman <junaid.cloud2@gmail.com>"]
description = "The Ultimate Arch Linux Package Manager - GUI with 100% pacman & AUR feature parity"
license = "MIT"
repository = "https://github.com/Junaid433/guiman"
homepage = "https://github.com/Junaid433/guiman"
readme = "../README.md"
keywords = ["arch-linux", "aur", "package-manager", "gui", "tauri"]
categories = ["command-line-utilities", "development-tools", "gui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
rand = "0.8"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
